--- a/src/app/view/layouts/second-menu/second-menu.component.html
+++ b/src/app/view/layouts/second-menu/second-menu.component.html
@@ -9,13 +9,10 @@
                     </div>
                     <div class="menu">
                         <ul id="menu-secondary-items" class="mega">
-                            <li class="current-menu-item current_page_item"><a href="">Cisco</a></li>
-                            <li class=""><a href="">Databases</a></li>
-                            <li class=""><a href="">Microsoft's</a></li>
-                            <li class=""><a href="">Networking</a></li>
-                            <li class=""><a href="">Open Source</a></li>
-                            <li class=""><a href="">IT</a></li>
-                            <li class=""><a href="">User Groups</a></li>
+                            <!-- <li  *ngFor = "let category of menuArr let index = index"><a href="">{{category.category_name}}</a></li> -->
+
+                            <li *ngFor="let category of menuArr; let index = index" class="event_category"><a href="javascript:void(0)">{{category.category_name}}</a></li>
+                         
                         </ul>
                     </div>  
                 </nav>
