--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -31,7 +31,6 @@
     </div>
     <!-- .sidebar-wrap -->
 </aside>
-<div class="center"><button data-toggle="modal" data-target="#squarespaceModal" class="btn btn-primary center-block">Click Me</button></div>
 <!-- Footer Start-->
 <div id="footer" class="clearfix">
     <section class="footer_top clearfix">
@@ -236,13 +235,13 @@
 
 
  <div style="background-color: transparent;" class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true" *ngIf="loginModalHidden">
-      <div class="modal-dialog" style="width: 500px;" >
+      <div class="modal-dialog" style="width: 380px;" >
         <div class="modal-content">
             <div class="modal-header">
                 <button id="closeSignupModal" type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
             <h3 class="modal-title" id="lineModalLabel">Sign Up</h3>
         </div>
-        <div class="modal-body" style="max-height: 669px;">
+        <div class="modal-body">
 
             <!-- content goes here -->
 
