uploaded login model changes

--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -31,7 +31,7 @@
     </div>
     <!-- .sidebar-wrap -->
 </aside>
-<div class="center"><button data-toggle="modal" data-target="#squarespaceModal" class="btn btn-primary center-block">Click Me</button></div>
+
 <!-- Footer Start-->
 <div id="footer" class="clearfix">
     <section class="footer_top clearfix">
@@ -184,7 +184,7 @@
 
 
     <!-- this is login demo  modal squarespaceModal"-->
-    <div style="background-color: transparent;" class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true" *ngIf="loginModalHidden">
+    <div style="background-color: transparent;" class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"  *ngIf="loginModalHidden">
       <div class="modal-dialog" style="width: 500px;" >
         <div class="modal-content">
             <div class="modal-header">
@@ -235,7 +235,7 @@
 
 
 
- <div style="background-color: transparent;" class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true" *ngIf="loginModalHidden">
+ <div style="background-color: transparent;" class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"  *ngIf="loginModalHidden">
       <div class="modal-dialog" style="width: 500px;" >
         <div class="modal-content">
             <div class="modal-header">
@@ -286,12 +286,12 @@
                     </label>
                 </div>
                 <!-- <div id="popup_register_register_cap"></div> -->
-                <button class="btn btn-warning" type="submit">Sign Up</button>
-                <button class="btn btn-warning" type="reset" value="Save" name="submit">Cancel</button>
+                <button class="btn btn-info" type="submit">Sign Up</button>
+                <button class="btn btn-info" type="reset" value="Save" name="submit">Cancel</button>
             </form>
         </div>
 
-        <p style="margin-left: 15px;">Already have an account? <a data-target="#loginModal" id="tmpl-back-login" class="widgets-link" (click)="siginClick()">Sign in</a></p>
+        <p style="margin-left: 15px;">Already have an account? <a data-toggle="modal" data-target="#loginModal" id="tmpl-back-login" class="widgets-link" (click)="siginClick()">Sign in</a></p>
 
 
 
