--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -184,7 +184,7 @@
 
     <!-- this is login demo  modal squarespaceModal"-->
     <div style="background-color: transparent;" class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true" *ngIf="loginModalHidden">
-      <div class="modal-dialog" style="width: 500px;" >
+      <div class="modal-dialog" style="width: 380px;" >
         <div class="modal-content">
             <div class="modal-header">
                 <button id="closeLoginModal" type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
@@ -204,7 +204,7 @@
                     <div class="form_row clearfix">
                         <label> Password <span class="indicates">*</span> </label>
                         <input type="password" name="password" id="user_pass" class="textfield" size="20" ngModel required>
-                        <span id="user_passInfo"></span>  -
+                        <span id="user_passInfo"></span> 
                     </div>
                     <div class="form_row rember clearfix">
                         <label>
