add validations for login page

--- a/src/app/assets/css/layouts/footer/footer.component.css
+++ b/src/app/assets/css/layouts/footer/footer.component.css
@@ -47,3 +47,7 @@ position: absolute !important;
 #signupModal .form_row{
 	padding: 0 0 10px;
 }
+#user_loginInfo, #user_passInfo{
+	color: red;
+	font-size: 13px;
+}
