--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -188,7 +188,7 @@
 
     <!-- this is login demo  modal squarespaceModal"-->
     <div style="background-color: transparent;" class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"  *ngIf="loginModalHidden">
-      <div class="modal-dialog" style="width: 500px;" >
+      <div class="modal-dialog" style="width: 380px;" >
         <div class="modal-content">
             <div class="modal-header">
                 <button id="closeLoginModal" type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
@@ -201,14 +201,14 @@
                     <div class="form_row clearfix">
                         <label>Email <span class="indicates">*</span> </label>
                         <div class="form-group">
-                            <input type="text" name="username" id="user_login" size="20" class="textfield" ngModel required>
+                            <input type="text" (click)="usernameErr =''" name="username" id="user_login" size="20" class="textfield" ngModel>
                         </div>
-                        <span id="user_loginInfo"></span>  
+                        <span id="user_loginInfo">{{usernameErr}}</span> 
                     </div>
                     <div class="form_row clearfix">
                         <label> Password <span class="indicates">*</span> </label>
-                        <input type="password" name="password" id="user_pass" class="textfield" size="20" ngModel required>
-                        <span id="user_passInfo"></span>  -
+                        <input type="password" (click)="passwordErr =''" name="password" id="user_pass" class="textfield" size="20" ngModel>
+                        <span id="user_passInfo">{{passwordErr}}</span>
                     </div>
                     <div class="form_row rember clearfix">
                         <label>
