--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -199,7 +199,7 @@
                 <!-- content goes here -->
                 <form name="popup_login"  #form="ngForm" (ngSubmit)="userSignIn(form.value)">
                     <div class="form_row clearfix">
-                        <label>Email <span class="indicates">*</span> </label>
+                        <label>Username <span class="indicates">*</span> </label>
                         <div class="form-group">
                             <input type="text" (click)="usernameErr =''" name="username" id="user_login" size="20" class="textfield" ngModel>
                         </div>
