login signup validation forms

--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -6,7 +6,7 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a href="#" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york" title="New York">New York</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/event" title="Event">Event</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/ecategory/events/" title="Events">Events</a> <span class="sep">»</span> <span class="trail-end">Disaster! A 70’s Movie…Musical!</span>
+                    <a title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york" title="New York">New York</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/event" title="Event">Event</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/ecategory/events/" title="Events">Events</a> <span class="sep">»</span> <span class="trail-end">Disaster! A 70’s Movie…Musical!</span>
             </div>
         </div>
 
@@ -386,7 +386,7 @@
                                     <span class="share">
                                         <i class="step fa fa-facebook"></i>
                                     </span>
-                                    <span class="count" href="#">0
+                                    <span class="count" href="">0
                                         <span class="showlabel">&nbsp;Share</span>
                                     </span>
                                 </a>
@@ -408,7 +408,7 @@
                                 share: {
                                     facebook: true
                                 },
-                                template: '<a class="box" href="javascript:void(0);"><span class="share"><i class="step fa fa-facebook"></i></span><span class="count" href="#">{total}<span class="showlabel">&nbsp;' + FB_LIKE + '</span></span></a>',
+                                template: '<a class="box" href="javascript:void(0);"><span class="share"><i class="step fa fa-facebook"></i></span><span class="count" href="">{total}<span class="showlabel">&nbsp;' + FB_LIKE + '</span></span></a>',
                                 enableHover: false,
                                 enableTracking: true,
                                 urlCurl: 'http://demo.templatic.com/eventum/wp-content/plugins/Tevolution//tmplconnector/sharrre.php',
@@ -421,7 +421,7 @@
                                 share: {
                                     googlePlus: true
                                 },
-                                template: '<a class="box" href="#"><span class="share"><i class="fa fa-google-plus"></i></span><span class="count" href="#">{total}<span class="showlabel">+1</span></span></a>',
+                                template: '<a class="box" href=""><span class="share"><i class="fa fa-google-plus"></i></span><span class="count" href="">{total}<span class="showlabel">+1</span></span></a>',
                                 enableHover: false,
                                 enableTracking: true,
                                 urlCurl: 'http://demo.templatic.com/eventum/wp-content/plugins/Tevolution//tmplconnector/sharrre.php',
@@ -434,7 +434,7 @@
                                 share: {
                                     pinterest: true
                                 },
-                                template: '<a class="box" href="#"><span class="share"><i class="fa fa-pinterest"></i></span> <span class="count" href="#">{total} <span class="showlabel"> ' + PINT_REST + '</span></span></a>',
+                                template: '<a class="box" href=""><span class="share"><i class="fa fa-pinterest"></i></span> <span class="count" href="">{total} <span class="showlabel"> ' + PINT_REST + '</span></span></a>',
                                 enableHover: false,
                                 enableTracking: true,
                                 urlCurl: 'http://demo.templatic.com/eventum/wp-content/plugins/Tevolution//tmplconnector/sharrre.php',
