--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -31,10 +31,7 @@
     </div>
     <!-- .sidebar-wrap -->
 </aside>
-<<<<<<< HEAD
 
-=======
->>>>>>> 5085c9e35345b6ebcf66c4a5650e03faed4dbedf
 <!-- Footer Start-->
 <div id="footer" class="clearfix">
     <section class="footer_top clearfix">
@@ -188,9 +185,9 @@
 
     <!-- this is login demo  modal squarespaceModal"-->
     <div style="background-color: transparent;" class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"  *ngIf="loginModalHidden">
-      <div class="modal-dialog" style="width: 380px;" >
+      <div class="modal-dialog" style="width: 390px;" >
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header" id="sign_in_modal">
                 <button id="closeLoginModal" type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
                 <h3 class="modal-title" id="lineModalLabel">Sign In</h3>
             </div>
@@ -200,15 +197,14 @@
                 <form name="popup_login"  #form="ngForm" (ngSubmit)="userSignIn(form.value)">
                     <div class="form_row clearfix">
                         <label>Email <span class="indicates">*</span> </label>
-                        <div class="form-group">
                             <input type="text" (click)="usernameErr =''" name="username" id="user_login" size="20" class="textfield" ngModel>
-                        </div>
                         <span id="user_loginInfo">{{usernameErr}}</span> 
                     </div>
                     <div class="form_row clearfix">
                         <label> Password <span class="indicates">*</span> </label>
                         <input type="password" (click)="passwordErr =''" name="password" id="user_pass" class="textfield" size="20" ngModel>
                         <span id="user_passInfo">{{passwordErr}}</span>
+                        <span id="user_passInfo">{{invalidErr}}</span>
                     </div>
                     <div class="form_row rember clearfix">
                         <label>
@@ -237,8 +233,8 @@
 
 
 
- <div style="background-color: transparent;" class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true" *ngIf="loginModalHidden">
-      <div class="modal-dialog" style="width: 380px;" >
+ <div style="background-color: transparent;" class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+      <div class="modal-dialog" style="width: 420px;" id="sign_up_modal">
         <div class="modal-content">
             <div class="modal-header">
                 <button id="closeSignupModal" type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
@@ -260,22 +256,22 @@
                 <div class="form_row clearfix">
                     <label>Full Name <span class="indicates">*</span> </label>
                     <input name="username" type="text" id="user_name" class="textfield" value="" ngModel>
-                    <span id="user_name_error"></span>
+                    <span id="user_loginInfo">{{name}}</span>
                 </div>
                 <div class="form_row clearfix">
                     <label>Email <span class="indicates">*</span> </label>
-                    <input name="email" type="email" id="user_email" class="textfield" value="" ngModel>
-                    <span id="user_email_error"></span>
+                    <input name="email" type="text" id="user_email" class="textfield" value="" ngModel>
+                    <span id="user_loginInfo">{{useremail}}</span>
                 </div>
                 <div class="form_row clearfix">
                     <label> Password <span class="indicates">*</span> </label>
                     <input type="password" name="password" id="user_pass" class="textfield" value="" ngModel>
-                    <span id="user_passInfo"></span> 
+                    <span id="user_passInfo">{{userPass}}</span> 
                 </div>   
                 <div class="form_row clearfix">
                     <label> Confirm Password <span class="indicates">*</span> </label>
                     <input type="password" name="password_confirmation" id="user_cpass" class="textfield" value="" ngModel>
-                    <span id="user_passInfo"></span> 
+                    <span id="user_passInfo">{{usercnfpass}}</span> 
                 </div>  
                 <div class="form_row clearfix">
                     <label> Captcha <span class="indicates">*</span> </label>
@@ -289,7 +285,7 @@
                 </div>
                 <!-- <div id="popup_register_register_cap"></div> -->
                 <button class="btn btn-info" type="submit">Sign Up</button>
-                <button class="btn btn-info" type="reset" value="Save" name="submit">Cancel</button>
+                <button class="btn btn-info" type="reset" value="Save" name="submit" data-dismiss="modal">Cancel</button>
             </form>
         </div>
 
